<resources>
    <string name="app_name">HCEproject</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="twicepassword">密碼確認</string>
    <string name="about">關於</string>
    <string name="Cards">卡片夾</string>
    <string name="User">我</string>
    <string name="confirm">確認</string>
    <string name="Cancel">取消</string>
    <string name="Add">新增</string>
    <string name="AddNewCard">添加新的卡片</string>
    <string name="choseCardCompany">選擇發卡公司</string>
    <string name="inputcardverifyinfo">請輸入卡片驗證資訊</string>
    <string name="phonenumber">手機號碼</string>
    <string name="nationid">身分證字號</string>
    <string name="cardnumber">卡號</string>
    <string name="logout">登出</string>
    <string name="userinfo">使用者資訊</string>
    <string name="servicedesc">會員卡感應認證</string>
    <string name="aiddescription">卡片AID</string>
    <string name="startTransaction">感應驗證</string>
    <string name="CardLevel">會員等級</string>
        <string name="NLevel">一般會員</string>
        <string name="GLevel">金級會員</string>
        <string name="PLevel">白金級會員</string>
        <string name="DLevel">鑽石級會員</string>
    <string name="CardType">卡片類型</string>
        <string name="PCardType">永久</string>
        <string name="LCardType">限時</string>
        <string name="TCardType">計次</string>
    <string name="ExpireTime">有效期限</string>
</resources>
