<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/account"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/txvFragmentSignupAccount"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtFragmentSignupAccount"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/txvFragmentSignupPwd"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtFragmentSignupPwd"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/twicepassword"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/txvFragmentSignupPwdTwice"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtFragmentSignupPwdTwice"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>