<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="2"/>


    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:text="Member Card"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/textView"
            android:gravity="center"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="Create Your New Account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtCreateAccountId"
                android:layout_weight="1"
                android:hint="@string/account" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:layout_gravity="center">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/edtCreateAccountPwd"
                android:layout_weight="1"
                android:hint="@string/password"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:layout_gravity="center">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/edtCreateAccountCheckPwd"
                android:layout_weight="1"
                android:hint="@string/twicepassword"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:layout_gravity="center">

            <Button
                android:text="Create Account"
                android:id="@+id/btnCreateAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="0.5">

            <TextView
                android:text="Already have a account? Sign in"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txvHaveAccountSignIn"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="0.6"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="2"/>

</LinearLayout>
